# book-craft-ai

./: .gitignore  Cargo.toml  README.md  instruction.json  instruction.txt
src/: book.rs  config.rs  file.rs  gen_image.rs  image.rs  lib.rs  main.rs  models.rs  ollama.rs  utils.rs
