[package]
name = "book-craft-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
ollama-rs = "0.3.1"
regex = "1.11.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
